--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="https://unpkg.com/scrollreveal" type="text/javascript"></script>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<link rel="icon" type="image/png" href="./assets/favicon.png">
 
 
 
@@ -30,9 +31,8 @@
 
 		<nav id="nav">
 			<span class="container">
-				<a href="#intro">Home</a>
 				<a href="#about">About</a>
-				<a href="#work">Work Experience</a>
+				<a href="#work">Experience</a>
 				<a href="#projects">Projects</a>
 				<a href="">Resume</a>
 			</span>
