--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta charset='utf-8'>
 	<meta name="HandheldFriendly" content="true">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta property="og:title" content="Katherine Gotovsky"/>
+	<meta property="og:description" content="Product Manager at Caresplit and CS student at the University of Waterloo."/>
+	<meta property="og:image" content="./assets/favicon.png">
+
 
 	<link rel="stylesheet" type="text/css" href="./main.css" />
 	<script src="https://unpkg.com/scrollreveal" type="text/javascript"></script>
