--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<meta property="og:title" content="Katherine Gotovsky"/>
 	<meta property="og:description" content="Product Manager at Caresplit and CS student at the University of Waterloo."/>
-	<meta property="og:image" content="./assets/favicon.png">
+	<meta property="og:image" href="./assets/favicon.png">
 
 
 	<link rel="stylesheet" type="text/css" href="./main.css" />
