--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 	<meta property="og:title" content="Katherine Gotovsky"/>
 	<meta property="og:description" content="Product Manager at Caresplit and CS student at the University of Waterloo."/>
-	<meta property="og:image" href="./assets/favicon.png">
+	<meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C5603AQHt9nqsGvZMcA/profile-displayphoto-shrink_400_400/0?e=1597881600&v=beta&t=kyiIiEXfHTTrmCEDn0YImKhw_90XGgFbOj65F5rbJtss">
+	<meta property="og:image:type" content="image/png">
+	<meta property="og:image:width" content="1024">
+	<meta property="og:image:height" content="1024">
 
 
 	<link rel="stylesheet" type="text/css" href="./main.css" />
