--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<div id="instagram1" class="timeline-event">
 						<label class="timeline-event-icon"></label>
 						<div class="timeline-event-copy">
-							<p  id="date1" class=" timeline-event-thumbnail">May 2022 - Aug 2022</p>
+							<p  class=" timeline-event-thumbnail">May 2022 - Aug 2022</p>
 							<div style="margin-left: 15px;">
 								<a href="https://www.instagram.com/" target="_blank"><img style="width:52px; height:auto; float:right" src="assets/instagram.png" alt="" ></a>
 								<h3>Instagram</h3>
@@ -125,7 +125,7 @@
 					<div id="instagram2" class="timeline-event">
 						<label class="timeline-event-icon"></label>
 						<div class="timeline-event-copy">
-							<p  id="date1" class=" timeline-event-thumbnail">May 2021 - Aug 2021</p>
+							<p  class=" timeline-event-thumbnail">May 2021 - Aug 2021</p>
 							<div style="margin-left: 15px;">
 								<a href="https://www.instagram.com/" target="_blank"><img style="width:52px; height:auto; float:right" src="assets/instagram.png" alt="" ></a>
 								<h3>Instagram</h3>
@@ -142,7 +142,7 @@
 							<div style="margin-left: 15px;">
 								<a href="https://www.thescore.bet/" target="_blank"><img style="width:52px; height:auto; float:right" src="assets/thescore.png" alt="" ></a>
 								<h3>theScore</h3>
-								<h4>Product Manager Intern/h4>
+								<h4>Product Manager Intern</h4>
 								<p> Drove definition, roadmap, and design of new iOS product. Coordinated engineers, release manager, designers and QA to ensure progress toward delivery. Led user research and qualitative survey efforts to deliver recommendations and product specifications. </p>
 							</div>
 						</div>
