--- a/index.html
+++ b/index.html
@@ -207,32 +207,13 @@
 		<section id="projects">
 			<h2 class="subheading"> Projects </h2>
 
-			<div id="aphea" class="container project">
-				<a href="https://goto2240.wixsite.com/mysite" target="_blank">
-					<h2>Aphea</h2>
-					<h4>Co-founder, CEO and Head of Product</h4>
-					<p>Enabling women to take ownership of their sexual and reproductive health. Conducted 40+ customer interviews and managed concept-to-launch of web application. </p>
-				<img class="project-image" src="./assets/aphea.png" style="box-shadow: none" />
-			</div>
-
-			<div id="snowball" class="container project">
-				<a>
-					<h2>Snowball</h2>
-					<h4>Co-Founder & Product Manager </h4>
-					<p> We believe in a world where access to high-quality mentorship is available to all. Building a web application that facilitates mentoring relationships between those of different races and gender identities through micro-learning, a high-quality user experience, and a safe messaging platform. </p>
-					<!-- <div class="button">Learn more</div> -->
+				<div id="uwait" class="container project">
+				<a href="https://uwait.ca/" target="_blank">
+					<h2>u:wait</h2>
+					<h4>Co-founder and Chair</h4>
+					<p> Led a social justice organization focused on algorithmic integrity and ethical tech. We lead forums and community events to get university students critically thinking about the impacts of the products they build. </p>
 				</a>
-				<img class="project-image" src="./assets/snowball.png" style="box-shadow: none" />
-			</div>
-
-			<div id="lazsoc" class="container project">
-				<a href="http://www.lazsoc.ca/" target="_blank">
-					<h2>Lazaridis Students' Society</h2>
-					<h4>Product Manager</h4>
-					<p>Led team of developers, designers, and analysts to launch web app that connects Lazaridis students with clubs and student organizations. 1,000 monthly active users.</p>
-					<div class="button" href="http://www.lazsoc.ca/" target="_blank">Visit the site</div>
-				</a>
-				<img class="project-image" src="./assets/lazsoc.png" style="box-shadow: none" />
+				<img class="project-image" src="./assets/uwait.png" style="box-shadow: none" />
 			</div>
 
 			<div id="tpi" class="container project">
@@ -243,6 +224,27 @@
 					<div class="button">Learn more</div>
 				</a>
 				<img class="project-image" src="./assets/productinitiative.png" style="box-shadow: none" />
+			</div>
+
+
+			<div id="aphea" class="container project">
+				<a href="https://goto2240.wixsite.com/mysite" target="_blank">
+					<h2>Aphea</h2>
+					<h4>Co-founder, CEO and Head of Product</h4>
+					<p>Enabling women to take ownership of their sexual and reproductive health. Conducted 40+ customer interviews and managed concept-to-launch of web application. </p>
+				</a>
+				<img class="project-image" src="./assets/aphea.png" style="box-shadow: none" />
+			</div>
+
+
+			<div id="lazsoc" class="container project">
+				<a href="http://www.lazsoc.ca/" target="_blank">
+					<h2>Lazaridis Students' Society</h2>
+					<h4>Product Manager</h4>
+					<p>Led team of developers, designers, and analysts to launch web app that connects Lazaridis students with clubs and student organizations. 1,000 monthly active users.</p>
+					<div class="button" href="http://www.lazsoc.ca/" target="_blank">Visit the site</div>
+				</a>
+				<img class="project-image" src="./assets/lazsoc.png" style="box-shadow: none" />
 			</div>
 
 
@@ -270,9 +272,9 @@
 
 			<div id="laurier-consulting" class="container project">
 				<a href="https://www.facebook.com/profile.php?id=234471720224&ref=br_rs" target="_blank">
-					<h2>Laurier Startup Consulting</h2>
+					<h2>Laurier Consulting</h2>
 					<h4>Managing Director & Co-President</h4>
-					<p> We pair Laurier's best business students with emerging tech startups from the K-W region. Acquired 6 clients for club with a total valuation of $1B+. </p>
+					<p> We pair Laurier's best business students with emerging tech startups from the Kitchener-Waterloo region. Acquired 6 clients for club with a total valuation of $1B+. </p>
 					<div class="button">Find us on Facebook</div>
 				</a>
 				<img class="project-image" src="./assets/laurierconsulting.png" style="box-shadow: none" />
