Added resume and assets

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<a href="#about">About</a>
 				<a href="#work">Experience</a>
 				<a href="#projects">Projects</a>
-				<a href="https://drive.google.com/file/d/1XcCQkQCh2LY9o7n0lA9wbyW_TFxxVyhp/view?usp=sharing" target="_blank">Resume</a>
+				<a href="https://drive.google.com/file/d/1FFzHWYmhzw0tnAdw2fqB3cV1hXC0IOUQ/view?usp=sharing" target="_blank">Resume</a>
 			</span>
 		</nav>
 
@@ -60,7 +60,7 @@
 					<a class="circle" href="https://www.github.com/katherinegot/" target="_blank" >
 						<img id="github" src="./assets/github.png" >
 					</a>
-					<a class="circle" href="" >
+					<a class="circle" href="https://drive.google.com/file/d/1FFzHWYmhzw0tnAdw2fqB3cV1hXC0IOUQ/view?usp=sharing" >
 						<img id="resume" src="./assets/link.png" target="_blank" >
 					</a>
 				</div>
@@ -112,7 +112,7 @@
 					<div id="instagram1" class="timeline-event">
 						<label class="timeline-event-icon"></label>
 						<div class="timeline-event-copy">
-							<p  class=" timeline-event-thumbnail">May 2022 - Aug 2022</p>
+							<p  id="#date10" class=" timeline-event-thumbnail">May 2022 - Aug 2022</p>
 							<div style="margin-left: 15px;">
 								<a href="https://www.instagram.com/" target="_blank"><img style="width:52px; height:auto; float:right" src="assets/instagram.png" alt="" ></a>
 								<h3>Instagram</h3>
@@ -125,7 +125,7 @@
 					<div id="instagram2" class="timeline-event">
 						<label class="timeline-event-icon"></label>
 						<div class="timeline-event-copy">
-							<p  class=" timeline-event-thumbnail">May 2021 - Aug 2021</p>
+							<p id="#date0" class=" timeline-event-thumbnail">May 2021 - Aug 2021</p>
 							<div style="margin-left: 15px;">
 								<a href="https://www.instagram.com/" target="_blank"><img style="width:52px; height:auto; float:right" src="assets/instagram.png" alt="" ></a>
 								<h3>Instagram</h3>
@@ -298,7 +298,9 @@
 				<a class="circle" href="https://www.github.com/katherinegot/" target="_blank">
 					<img id="github" src="./assets/github.png" >
 				</a>
-				<a class="circle" href="https://drive.google.com/file/d/1XcCQkQCh2LY9o7n0lA9wbyW_TFxxVyhp/view?usp=sharing" target="_blank" >
+					<a class="circle" href="https://drive.google.com/file/d/1FFzHWYmhzw0tnAdw2fqB3cV1hXC0IOUQ/view?usp=sharing" >
+						<img id="resume" src="./assets/link.png" target="_blank" >
+					</a>
 			</div>
 
 
