--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 					<h2>u:wait</h2>
 					<h4>Co-founder and Chair</h4>
 					<p> Led a social justice organization focused on algorithmic integrity and ethical tech. We lead forums and community events to get university students critically thinking about the impacts of the products they build. </p>
+					<div class="button">Learn more</div>
 				</a>
 				<img class="project-image" src="./assets/uwait.png" style="box-shadow: none" />
 			</div>
@@ -228,11 +229,11 @@
 
 
 			<div id="aphea" class="container project">
-				<a href="https://goto2240.wixsite.com/mysite" target="_blank">
+<!-- 				<a href="" target="_blank"> -->
 					<h2>Aphea</h2>
 					<h4>Co-founder, CEO and Head of Product</h4>
 					<p>Enabling women to take ownership of their sexual and reproductive health. Conducted 40+ customer interviews and managed concept-to-launch of web application. </p>
-				</a>
+<!-- 				</a> -->
 				<img class="project-image" src="./assets/aphea.png" style="box-shadow: none" />
 			</div>
 
