Fixed minor issues

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 			<div id="aphea" class="container project">
 <!-- 				<a href="" target="_blank"> -->
 					<h2>Aphea</h2>
-					<h4>Co-founder, CEO and Head of Product</h4>
+					<h4>Co-founder and Head of Product</h4>
 					<p>Enabling women to take ownership of their sexual and reproductive health. Conducted 40+ customer interviews and managed concept-to-launch of web application. </p>
 <!-- 				</a> -->
 				<img class="project-image" src="./assets/aphea.png" style="box-shadow: none" />
